# ccviztracer

./: .cctracer.ini  .gitignore  CMakeLists.txt  README.md  rebuild.sh  run.sh
example/: example.cpp  multiprocess.cpp  multithread.cpp
src/llvm/: CCTracerPass.cpp
src/runtime/: cctracer.cpp
src/util/: cctracer_config.h  ini.h
test/: CMakeLists.txt  configparser.cpp
